Software and datasets to support 'Modern Applied Statistics with S',
fourth edition, by W. N. Venables and B. D. Ripley.
Springer, 2002, ISBN 0-387-95457-0.

This file documents software changes since the third edition.


- fixed a bug in knn(use.all = FALSE)
- added SOM, batchSOM and ancillary functions.
- Bugfix in SOM (7.0-5)
- knn* and lvq* explicitly check for missing values in the inputs.
- knn1 was not handling ties correctly in some cases (but knn was).
- added check for user error in inputs in knn.cv.