@@ -1,9 +1,10 @@
 Bundle: VR
 Priority: recommended
 Contains: MASS class nnet spatial
-Version: 7.2-5
-Date: 2004-08-03
-Depends: R (>= 2.0.0), graphics, stats, lattice, nlme, survival
+Version: 7.2-6
+Date: 2004-08-11
+Depends: R (>= 2.0.0), graphics, stats
+Suggests: lattice, nlme, survival
 Author: S original by Venables & Ripley.
   R port by Brian Ripley <ripley@stats.ox.ac.uk>, following earlier
   work by Kurt Hornik and Albrecht Gebhardt.
@@ -11,6 +12,5 @@ Maintainer: Brian Ripley <ripley@stats.ox.ac.uk>
 BundleDescription: Functions and datasets to support Venables and
   Ripley, 'Modern Applied Statistics with S' (4th edition).
 License: GPL (version 2 or later)  See file LICENCE.
-LazyData: yes
 URL: http://www.stats.ox.ac.uk/pub/MASS4/
-Packaged: Tue Aug  3 13:33:47 2004; ripley
+Packaged: Wed Aug 11 23:10:53 2004; ripley
